@@ -42,6 +42,8 @@ register-ip-mgr | introduce new util to display and unregister-unused dynamic re
 service-edit: new actions=description-delete | new 'filter=(description is.empty)' | new 'filter=(location is.child.of [DG]) / (location is.parent.of [DG])'
 tag-edit: new 'filter=(location is.child.of [DG]) / (location is.parent.of [DG])'
 address-edit: new actions=name-replace-character:[search],[replace]
+rule-edit: new action "name-Replace-Character:search,replace"
+service-edit: new action "name-Replace-Character:search,replace"
 
 utils(under development):
 ike: new script to show all IKE/IPsec profile and config settings
